# docling-testing

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BENCHMARK_PLAN.md  BREAKTHROUGH_FINDINGS.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPARISON_FRESH_VS_SAVED.md  CONTINUATION_PROMPT.md  CORPUS_ANALYSIS.md  DOCKER_BUILD_SUMMARY.md  Dockerfile.easyocr-test  Dockerfile.vastai  Dockerfile.vastai-balanced  Dockerfile.vastai-batch  Dockerfile.vastai-workers  FINAL_STATUS.md  HARVARD_SCRAPING_REPORT.md  IMPLEMENTATION_PLAN.md  INITIAL_FINDINGS.md  README.md  READY_TO_TEST.md  REFACTORING_SUMMARY.md  RESEARCH_TEXT_CLASSIFICATION_METHODS.md  SCALING_RESULTS.md  STANFORD_SCRAPING_REPORT.md  analyze_citation_density.py  analyze_contamination.py  analyze_list_items.py  benchmark_extraction.py  benchmark_ml_vs_heuristics.py  build_clean_corpus.py  check_numbered_labels.py  compare_body_text.py  debug_harvard_extraction.py  debug_harvard_simple.py  debug_lambda_any.py  debug_lambda_input.py  debug_specific_paragraphs.py  deploy_and_run_ocr.sh  (+48 more)
.claude/skills/: collect-law-reviews.md
data/: collection_metadata.json  georgetown_collection_results.json  labeled_pdf_corpus.csv  law_review_patterns.json  multiclass_corpus.csv  pdf_tag_visualization.html  semantic_structure_analysis.json  spatial_7class_corpus.csv
data/cover_pages/: gallery.html  (+1 more)
data_archive_20251017_2238/: cover_pages_corpus.csv  footnote_survey_all_journals.txt  html_categorization_results.csv  labeled_pdf_corpus.csv  law_review_quality_scores.csv  law_review_quality_scores.json  new_downloads_summary.txt  pdf_extraction_feasibility.json  pdf_tag_visualization.html  tagged_pdfs_inventory.json  tagged_pdfs_new.json  texas_collection_results.json
docs/: ACTIVE_LEARNING_PIPELINE.md  ARCHIVE_CANDIDATES.md  ASTRAL_SUITE_GUIDE.md  CITE_ASSIST_ISSUE_PLATFORM_COVERS.md  COMPREHENSIVE_LAW_REVIEW_RECONNAISSANCE.md  CORPUS_CLEANUP_SUMMARY.md  CORPUS_CONSOLIDATION_REPORT.md  CORPUS_DIVERSITY_ASSESSMENT.md  CORPUS_PLATFORM_COVER_CLEANING_REPORT.md  CURRENT_DATASET_ACTION_PLAN.md  DATA_SIZING_QUICK_REFERENCE.md  DATA_SIZING_RESEARCH_SUMMARY.md  DOCLING_CONFIGURATION_OPTIONS.md  DOCLING_MAX_RECALL_CORRECTIONS.md  EASYOCR_VASTAI_DEPLOYMENT.md  EMPIRICAL_DATA_SIZING_RESEARCH.md  HTML_EXTRACTION_PATTERNS.md  LAW_REVIEW_RECONNAISSANCE_REPORT.md  LAYOUT_DETECTION_INVESTIGATION_SUMMARY.md  NON_LAW_COLLECTION_DEPLOYMENT_SUMMARY.md  NON_LAW_REVIEW_COLLECTION_DEPLOYMENT_PLAN.md  OCR_INVESTIGATION_FINDINGS.md  OCR_OVERLAY_INSPECTION_GUIDE.md  PLATFORM_COVER_DETECTION_COMPLETE.md  QUICK_START_NON_LAW_COLLECTION.md  REPO_HYGIENE_ACTION_PLAN.md  RUNPOD_SETUP_GUIDE.md  TRAINING_EXCLUSIONS.md  VASTAI_BEST_PRACTICES.md  VASTAI_GPU_RENTAL_ANALYSIS.md  VASTAI_QUICK_START.md  VASTAI_TROUBLESHOOTING_GUIDE.md  VAST_AI_BEST_PRACTICES_2025.md  VAST_AI_CUSTOM_IMAGE.md  VAST_AI_DEPLOYMENT_GUIDE.md  VAST_AI_QUICK_REFERENCE.md  VAST_AI_RESEARCH_SUMMARY.md  docling_max_recall.md  multiclass-training.md  pdf_tag_quality_report.md  (+2 more)
models/: experiment_results.json
scripts_archive_20251017_2310/: README.md
tests/: __init__.py  conftest.py  test_corpus.py  test_models.py  test_sequence_alignment.py  test_validation.py
(+1482 files in other folders)
