[project]
name = "docling-testing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.56.1",
    "scikit-learn>=1.3.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "datasets>=2.14.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]
