[project]
name = "docling-testing"
version = "3.0.0"
description = "ML model training repository for document structure classification"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.56.1",
    "scikit-learn>=1.3.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "datasets>=2.14.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pypdf>=6.1.1",
    "feedparser>=6.0.12",
    "lxml>=5.4.0",
    "rapidfuzz>=3.14.1",
    "tesserocr>=2.9.1",
    "tiktoken>=0.12.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pymupdf4llm>=0.0.27",
    "easyocr>=1.7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Ruff configuration for code quality
[tool.ruff]
target-version = "py313"
line-length = 100
fix = true
exclude = [
    "archive",
    "archive/**",
    ".venv",
    "models",  # Exclude model files
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = [
    "T201",   # Allow print in scripts
    "F841",   # Allow unused variables (pre-existing)
    "B007",   # Allow unused loop variables (pre-existing)
    "C408",   # Allow dict() calls (pre-existing)
    "C419",   # Allow list comprehensions in all() (pre-existing)
    "SIM102", # Allow nested if statements (pre-existing)
    "SIM103", # Allow non-simplified conditionals (pre-existing)
    "PTH123", # Allow open() instead of Path.open() (pre-existing)
    "ARG001", # Allow unused function arguments (pre-existing)
    "ARG002", # Allow unused **kwargs (pre-existing)
    "E722",   # Allow bare except (pre-existing)
    "E741",   # Allow ambiguous variable names (pre-existing)
]
"tests/**/*.py" = [
    "PTH123", # Allow open() in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.11.10",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "typer>=0.19.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
